--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <html>
   <body>
-    <h1>Sumador</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" id="sumar-button" />
+    <h1>Controlador de Auto</h1>
+    <form id="dimension-form">
+      <label for="dimension">Ingrese la dimension de la superficie plana:</label>
+      <input type="text" id="dimension" />
     </form>
     <div id="resultado-div"></div>
 
