--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <form id="dimension-form">
       <label for="dimension">Ingrese la dimension de la superficie plana:</label>
       <input type="text" id="dimension" />
+      <input type="submit" value="validar" id="validar-button" />
     </form>
     <div id="resultado-div"></div>
 
