Se genera una interfaz de usuario

--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
   <body>
     <h1>Controlador de Auto</h1>
     <form id="dimension-form">
-      <label for="dimension">Ingrese la dimension de la superficie plana:</label>
-      <input type="text" id="dimension" />
+      <label for="posicionInicial">Ingrese la posicion inicial: </label>
+      <input type="text" id="posicionInicial" />
+      <label for="limites">Ingrese los limites: </label>
+      <input type="text" id="limites" />
+      <label for="comandos">Ingrese los comandos: </label>
+      <input type="text" id="comandos" />
       <input type="submit" value="validar" id="validar-button" />
     </form>
     <div id="resultado-div"></div>
