--- a/index.html
+++ b/index.html
@@ -2,16 +2,12 @@
   <body>
     <h1>Controlador de Auto</h1>
     <form id="dimension-form">
-      <label for="posicionInicial">Ingrese la posicion inicial: </label>
-      <input type="text" id="posicionInicial" />
-      <label for="limites">Ingrese los limites: </label>
-      <input type="text" id="limites" />
-      <label for="comandos">Ingrese los comandos: </label>
-      <input type="text" id="comandos" />
+      <label for="cadena">Ingrese la cadena segun el orden: <strong>dimension/posicion inicial/comandos de avance</strong>  </label>
+      <input type="text" id="cadena" />
       <input type="submit" value="validar" id="validar-button" />
     </form>
     <div id="resultado-div"></div>
-
+    <p>Made by: Camargo Belen</p>
     <script type="module" src="./src/presenter.js"></script>
   </body>
 </html>
