Añadiendo nombre al resultado final en el documento index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <input type="text" id="cadena" />
       <input type="submit" value="validar" id="validar-button" />
     </form>
+    <p>Resultado:</p>
     <div id="resultado-div"></div>
     <p>Made by: Camargo Belen</p>
     <script type="module" src="./src/presenter.js"></script>
