Añadiendo nombre de autor de codigo en el index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     </form>
     <p>Resultado:</p>
     <div id="resultado-div"></div>
-    <p>Made by: Camargo Belen</p>
+    <p>Made by: Camargo Belen </p>
+    <p>Made by: Terceros Jonatan </p>
     <script type="module" src="./src/presenter.js"></script>
   </body>
 </html>
