Ajuste Final de la interfaz de usuario, mostrar pos inicial,comandos

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <form id="dimension-form">
       <label for="cadena">Ingrese la cadena segun el orden: <strong>dimension/posicion inicial/comandos de avance</strong>  </label>
       <input type="text" id="cadena" />
-      <input type="submit" value="validar" id="validar-button" />
+      <input type="submit" value="Ejeuctar" id="ejecutar-button" />
     </form>
     <p>Resultado:</p>
     <div id="resultado-div"></div>
-    <p>Made by: Camargo Belen </p>
-    <p>Made by: Terceros Jonatan </p>
+
     <script type="module" src="./src/presenter.js"></script>
   </body>
 </html>
